openshift/1.4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phone-md-app-service
  namespace: phone-md
spec:
  selector:
    app: phone-md-app
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
